// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Storybook Snapshot Tests > Components/Alerts/Loading > Loading 1`] = `
<div>
  <div
    class="fade alert alert-light show"
    role="alert"
  >
    <span
      style="margin-right: 10px;"
    >
      Loading platform data files
    </span>
    <div
      class="spinner-border spinner-border-sm text-warning"
    />
  </div>
</div>
`;

exports[`Storybook Snapshot Tests > Components/Alerts/PlatformLoading > PlatformLoading 1`] = `
<div>
  <div
    class="fade alert alert-light show"
    role="alert"
  >
    <span
      style="margin-right: 10px;"
    >
      Loading 
       dataset
    </span>
    <div
      class="spinner-border spinner-border-sm text-warning"
    />
  </div>
</div>
`;

exports[`Storybook Snapshot Tests > Components/Alerts/Warning > Warning 1`] = `
<div>
  <div
    class="fade alert alert-warning show"
    role="alert"
  >
    This is a warning
  </div>
</div>
`;

exports[`Storybook Snapshot Tests > Components/Footer > footer 1`] = `
<div>
  <footer
    class="mt-auto caption py-6 px-auto bg-secondary bg-opacity-5"
  >
    <div
      class="text-center g-1 row"
    >
      <div
        class="col-md-12 col-12"
      >
        Copyright © 2026 - NERACOOS
      </div>
      <div
        class="col-md-12 col-12"
      >
        Send us
         
        <a
          href="https://docs.google.com/forms/d/e/1FAIpQLSdzP90655d-ZuDGpdgcMmTvxW1sgR_Hg4KI1KCfQDFU8MMF0g/viewform?usp=sf_link"
        >
          feedback/bug reports
        </a>
      </div>
      <div
        class="col-md-12 col-12"
      >
        Product of: 
        <a
          href="http://www.neracoos.org/"
        >
          NERACOOS.org
        </a>
         - Developed by:
         
        <a
          href="https://gmri.org/commitments/science/ocean-data-products/"
        >
          GMRI
        </a>
      </div>
    </div>
  </footer>
</div>
`;

exports[`Storybook Snapshot Tests > ERDDAP/Info/Panel > platformInfo 1`] = `
<div>
  <div
    class="p-2 card"
    role="complementary"
  >
    <div
      class="p-0 card-body"
    >
      <p
        class="m-0 text-black-65"
        role="header-id"
      >
        Station 
        M01
      </p>
      <h2
        class="text-primary pb-3"
        role="header"
      />
      <div
        class="d-flex flex-column gap-1"
      >
        <span
          class="d-flex flex-row gap-2 align-items-baseline"
        >
          <h3
            class="text-primary m-0"
          >
            NDBC ID
          </h3>
           
          <p
            class="text-black-65 m-0"
          >
            44037
          </p>
        </span>
        <span
          class="text-primary h3-mimic"
        >
          Jordan Basin
        </span>
        <span
          class="d-flex flex-row gap-2 pb-5 align-items-baseline"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-location-pin text-primary"
            data-icon="location-pin"
            data-prefix="fas"
            role="img"
            viewBox="0 0 384 512"
          >
            <path
              d="M192 0C86 0 0 84.4 0 188.6 0 307.9 120.2 450.9 170.4 505.4 182.2 518.2 201.8 518.2 213.6 505.4 263.8 450.9 384 307.9 384 188.6 384 84.4 298 0 192 0z"
              fill="currentColor"
            />
          </svg>
          <span
            class="text-primary h3-mimic"
          >
            43.5
          </span>
          <span
            class="text-black-65"
          >
            Lat
          </span>
          <span
            class="text-primary h3-mimic"
          >
            -67.87
          </span>
          <span
            class="text-black-65 m-0"
          >
            Lon
          </span>
        </span>
        <span
          class="mt-auto"
        >
          <a
            href="http://gyre.umeoce.maine.edu/gomoos.php"
          >
            University of Maine
          </a>
        </span>
      </div>
    </div>
  </div>
</div>
`;
